# Sicav_Scraper

./: Dockerfile  Dockerfile.tests  README.md  docker-compose.test.yml  docker-compose.yaml  pyproject.toml
scripts/: run_test.sh
sicavs/: items.py  middlewares.py  pipelines.py  settings.py
sicavs/spiders/: Msc3poSpider.py
tests/: conftest.py  html_snapshot.txt  mocks.py  test_db.py  test_format_data.py  test_initialization.py  test_url.py
